tests/positive/Axiom.mjuvix
module Axiom;

axiom Action : Type {
 ghc ↦ "IO ()";
 agda ↦ "IO Unit";
};

end;
