tests/negative/CompileBlocks/MultipleCompileRuleSameBackend.mjuvix
module MultipleCompileRuleSameBackend;


axiom A : Type;

compile A {
  ghc -> "Bool";
  ghc -> "Integer";
};

end;
